remapping values worked

--- a/src/app/edit/editPerson/editPerson.html
+++ b/src/app/edit/editPerson/editPerson.html
@@ -68,6 +68,10 @@
                 <br>
                 <br>
                 <br> 
+                <b style="font-weight: 700;">What languages do you speak?</b> {{ person?.data.languages }}
+                <br>
+                <br>
+                <br>
                 <b style="font-weight: 700;">What ethnicities do you work with in at least 20% of your events</b> {{ person?.data.ethnicities }}
                 <br>
                 <br>
